--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,8 @@
     <div id="post">
       <h1>este es el titulo atractivo e interesante del post</h1>
       <p>y este es el parrafo de inicio donde vamos donde vamos a explicar las cosas increibles que se hacen con ramas</p>
+      <p>Demaciado optimismo, el indice empezara emotivo, alcista quiza supere los 100 puntos al principio de la rueda, 
+          para despues corregir, tiene pinta que sera lateral entrada la rueda y se movera entre los 29850 y 29900, comportamiento espectante</p>
        </div>
     </div>
 </body>
