--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-        cabecera
+        HYPERBLOG <span id="tangline">tu blog de confianza</span>
         </div>
     <div id="post">
       <h1>este es el titulo atractivo e interesante del post</h1>
