--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
+            <img id="logo" src="img/dragon.png">
      HYPERBLOG<span id="tangline">La compra inteligente</span>
         </div>
     <div id="post">
