--- a/blogpost.html
+++ b/blogpost.html
@@ -13,6 +13,10 @@
       <p>Este es el parrafo de inicio donde vamos donde vamos a explicar las cosas increibles que se hacen con ramas</p>
       <p>Demaciado optimismo, el indice empezara emotivo, alcista quiza supere los 100 puntos al principio de la rueda, 
           para despues corregir, tiene pinta que sera lateral entrada la rueda y se movera entre los 29850 y 29900, comportamiento espectante</p>
+          <p>"---Dale a like si te gusta---"</p>
+       </div>
+       <div id="footer">
+           Hecho con amor de Platzi 
        </div>
     </div>
 </body>
