--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-     HYPERBLOG<span id="tangline">La compra inteligente</span>
+     HYPERBLOG<span id="tangline">Mi primer blog</span>
         </div>
     <div id="post">
       <h1>Este es el titulo atractivo e interesante del post</h1>
