--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,7 @@
     <div id="post">
       <h1>Este es el titulo atractivo e interesante del post</h1>
       <p>Este es el parrafo de inicio donde vamos donde vamos a explicar las cosas increibles que se hacen con ramas</p>
-      <p>Demaciado optimismo, el indice empezara emotivo, alcista quiza supere los 100 puntos al principio de la rueda, 
+      <p>Demaciado optimismo, el índice empezará emotivo, alcista quizá supere los 100 puntos al principio de la rueda, 
           para despues corregir, tiene pinta que sera lateral entrada la rueda y se movera entre los 29850 y 29900, comportamiento espectante</p>
           <p>"---Dale a like si te gusta---"</p>
        </div>
